--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button_save_location">Save</string>
     <string name="button_get_location">Get Location</string>
     <string name="no_location_detected">Sorry, no location detected</string>
+    <string name="button_whereami">Whereami</string>
 </resources>
